project( NetEaseIntern )
cmake_minimum_required( VERSION 2.8.3 )

include( CheckCXXCompilerFlag )
check_cxx_compiler_flag( "-std=c++11"   COMPILER_SUPPORTS_CXX11 )
check_cxx_compiler_flag( "-std=c++0x"   COMPILER_SUPPORTS_CXX0X )
if( COMPILER_SUPPORTS_CXX11 )
    if( CMAKE_COMPILER_IS_GNUCXX )
        set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11" )
    else()
        set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
    endif()
elseif( COMPILER_SUPPORTS_CXX0X)
    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )
else()
    # MSVC, On by default (if available)
endif()

include_directories( ${CMAKE_SOURCE_DIR} )
include_directories( ${CMAKE_BINARY_DIR} )
configure_file(
    "${PROJECT_SOURCE_DIR}/Configs.h.in"
    "${PROJECT_BINARY_DIR}/Configs.h" )

add_executable( main  src/main.cpp )
add_executable( main1 src/main1.cpp )
add_executable( main2 src/main2.cpp )
add_executable( main3 src/main3.cpp )
add_executable( main4 src/main4.cpp )
add_executable( main5 src/main5.cpp )
add_executable( main6 src/main6.cpp )
add_executable( main7 src/main7.cpp )
add_executable( main8 src/main8.cpp )
add_executable( main9 src/main9.cpp )
add_executable( main10 src/main10.cpp )
add_executable( main11 src/main11.cpp )
add_executable( main12 src/main12.cpp )
add_executable( main13 src/main13.cpp )
add_executable( main14 src/main14.cpp )
add_executable( main15 src/main15.cpp )

add_executable( main16 src/main16.cpp )
add_executable( main17 src/main17.cpp )
add_executable( main18 src/main18.cpp )
add_executable( main19 src/main19.cpp )
add_executable( main20 src/main20.cpp )

add_executable( main1a src/main1a.cpp )
add_executable( main1b src/main1b.cpp )
add_executable( main1c src/main1c.cpp )

add_executable( main2a src/main2a.cpp )
add_executable( main2b src/main2b.cpp )
add_executable( main2c src/main2c.cpp )

add_executable( main3a src/main3a.cpp )
add_executable( main3b src/main3b.cpp )

add_executable( main4a src/main4a.cpp )
add_executable( main4b src/main4b.cpp )

add_executable( main5a src/main5a.cpp )
add_executable( main5b src/main5b.cpp )

add_executable( main6a src/main6a.cpp )
add_executable( main6b src/main6b.cpp )
add_executable( main6c src/main6c.cpp )
add_executable( main6d src/main6d.cpp )

add_executable( main7a src/main7a.cpp )
add_executable( main7b src/main7b.cpp )
add_executable( main7c src/main7c.cpp )
add_executable( main7d src/main7d.cpp )
add_executable( main7e src/main7e.cpp )

add_executable( main8a src/main8a.cpp )
add_executable( main8b src/main8b.cpp )
add_executable( main8c src/main8c.cpp )
add_executable( main8d src/main8d.cpp )
